<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>EpochFlow</groupId>
	<artifactId>Realistic-Survival-in-Minecraft</artifactId>
	<version>0.0.1-SNAPSHOT</version>
  
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>bungeecord-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
		<repository>
			<id>minecraft-repo</id>
			<url>https://libraries.minecraft.net/</url>
		</repository>
	</repositories>

    <dependencies>        
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
        	<groupId>com.mojang</groupId>
        	<artifactId>authlib</artifactId>
        	<version>1.5.21</version>
        	<scope>provided</scope>
        </dependency>
    </dependencies>
    
    <build>
    	<sourceDirectory>src/main/java</sourceDirectory>
        <plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<appendAssemblyId>false</appendAssemblyId>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
              	<artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                	<source>1.8</source>
                	<target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
  
</project>